1. rest controller "search-by-type" renamed to "search-by-type-and-city" 2. average rating calculation in domain limited to 2 decimal places and returns "-1" if the list of ratings is null. 3. for All providers and Found providers template: - removed individual ratings with comments - if no ratings yet, then it is communicated 4. for Client Panel form added search by date. ServiceProviderSearchDto class adjusted accordingly. 5. On backend: - logic to filter by date - expand filtering logic for category to All categories TODO on back-end: clean code for function findByCityAndTypeOfService in ServiceProviderService.java